[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-transcript-tool"
version = "1.0.0"
description = "YouTube 동영상의 메타데이터와 자막을 JSON/텍스트로 추출"
authors = [{name = "User"}]
dependencies = [
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2023.12.30",
]
requires-python = ">=3.8"

[project.scripts]
yt = "script:main"